--- a/app/src/main/res/layout/fragment_play.xml
+++ b/app/src/main/res/layout/fragment_play.xml
@@ -31,140 +31,29 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/linearLayout"
-        android:orientation="horizontal"
-        android:id="@+id/linearLayout2">
-
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/formula_de_compasso"
-            android:textAlignment="center"
-            android:textSize="@dimen/text_size_normal" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/linearLayout2"
-        android:orientation="horizontal"
-        android:id="@+id/linearLayout3">
-
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/edt_tempos"
-            android:layout_alignBottom="@+id/edt_tempos"
-            android:layout_alignParentStart="true"
-            android:text="@string/tempos"
-            android:textSize="@dimen/text_size_xxnormal"
-            tools:text="@string/tempos" />
-
-        <EditText
-            android:id="@+id/edt_tempos"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/linearLayout2"
-            android:layout_toEndOf="@+id/textView5"
-            android:ems="2"
-            android:hint="000"
-            android:inputType="number"
-            android:textAlignment="center" />
-
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/edt_tempos"
-            android:layout_alignBottom="@+id/edt_tempos"
-            android:layout_marginStart="86dp"
-            android:layout_toEndOf="@+id/edt_tempos"
-            android:text="@string/nota"
-            android:textSize="@dimen/text_size_xxnormal"
-            tools:text="@string/nota" />
-
-        <Spinner
-            android:id="@+id/spn_notas"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignTop="@+id/textView6"
-            android:layout_gravity="center_vertical"
-            android:layout_toEndOf="@+id/textView6"
-            android:layout_weight="1" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/linearLayout3"
-        android:orientation="horizontal"
-        android:id="@+id/linearLayout4">
-
-        <TextView
-            android:id="@+id/textView9"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/bpm"
-            android:textSize="@dimen/text_size_xxnormal"
-            tools:text="@string/bpm" />
-
-        <EditText
-            android:id="@+id/edt_BPM"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="2"
-            android:hint="000"
-            android:inputType="number"
-            android:textAlignment="center" />
-
-        <Button
-            android:id="@+id/button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/play" />
-
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/stop" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/linearLayout4"
-        android:orientation="horizontal"
-        android:id="@+id/linearLayout5">
-
-        <TextView
-            android:id="@+id/textView10"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/playlist"
-            android:textAlignment="center"
-            android:textSize="@dimen/text_size_normal"
-            tools:text="@string/playlist" />
-    </LinearLayout>
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/playlist_recycler_view"
-        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/linearLayout5" />
+        android:layout_below="@+id/linearLayout"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Compasso Atual" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"></LinearLayout>
+
+    </LinearLayout>
 
 </RelativeLayout>
