--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -33,6 +33,7 @@
     <dimen name="margin_padding_xlarge">40dp</dimen>
     <dimen name="margin_padding_xxlarge">50dp</dimen>
     <dimen name="margin_large">70dp</dimen>
+    <dimen name="margin_xlarge">90dp</dimen>
     <dimen name="spacing">9dp</dimen>
     <dimen name="dividerHeight">0.5dp</dimen>
     <dimen name="icon_width_height">30dp</dimen>
