--- a/app/src/main/res/layout/fragment_play.xml
+++ b/app/src/main/res/layout/fragment_play.xml
@@ -13,15 +13,15 @@
         android:orientation="horizontal"
         android:id="@+id/linearLayout">
 
-        <ImageButton
-            android:id="@+id/img_click"
+        <ImageView
+            android:id="@+id/imgClick"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             app:srcCompat="@android:drawable/presence_online" />
 
-        <ImageButton
-            android:id="@+id/img_pause"
+        <ImageView
+            android:id="@+id/imgStop"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -180,7 +180,7 @@
             android:text="@string/tempos" />
 
         <EditText
-            android:id="@+id/editText2"
+            android:id="@+id/edtTempos"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="2"
@@ -195,7 +195,7 @@
             android:text="@string/nota" />
 
         <Spinner
-            android:id="@+id/spinner3"
+            android:id="@+id/spnNota"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.2" />
@@ -207,7 +207,7 @@
             android:text="@string/bpm" />
 
         <EditText
-            android:id="@+id/editText7"
+            android:id="@+id/edtBPM"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0"
@@ -217,7 +217,7 @@
             android:textAlignment="center" />
 
         <ImageButton
-            android:id="@+id/imageButton"
+            android:id="@+id/btnOk"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0"
@@ -235,14 +235,14 @@
         android:id="@+id/linearLayout8">
 
         <ImageButton
-            android:id="@+id/imageButton2"
+            android:id="@+id/btnPlay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             app:srcCompat="@android:drawable/ic_media_play" />
 
         <ImageButton
-            android:id="@+id/imageButton8"
+            android:id="@+id/btnStop"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
