--- a/app/src/main/res/layout/fragment_play.xml
+++ b/app/src/main/res/layout/fragment_play.xml
@@ -43,7 +43,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="@string/compasso_atual" />
+            android:text="@string/compasso_atual"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/textView4"
@@ -51,7 +52,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="@string/proximo_compasso" />
+            android:text="@string/proximo_compasso"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <LinearLayout
@@ -160,7 +162,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="@string/formula_de_compasso" />
+            android:text="@string/formula_de_compasso"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <LinearLayout
@@ -229,10 +232,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/linearLayout7"
         android:orientation="horizontal"
-        android:id="@+id/linearLayout8">
+        android:id="@+id/linearLayout8"
+        android:layout_below="@+id/linearLayout7"
+        android:layout_alignParentStart="true">
 
         <ImageButton
             android:id="@+id/btnPlay"
@@ -262,12 +265,29 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="@string/playlist" />
+            android:text="@string/playlist"
+            android:textStyle="bold" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/playlist_recycler_view"
+            android:scrollbars="vertical"
+            android:background="@android:color/transparent"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+
+        <TextView
+            android:id="@+id/empty_text"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:padding="@dimen/margin_padding_normal"
+            android:gravity="center"
+            android:textStyle="italic"
+            android:visibility="gone"
+            android:textSize="@dimen/text_size_huge"
+            android:textColor="@color/colorPrimaryDark"
+            android:text="@string/sem_musicas"
+            android:fontFamily="sans-serif-condensed"/>
+
     </LinearLayout>
 
 </RelativeLayout>
