--- a/app/src/main/res/layout/fragment_edit.xml
+++ b/app/src/main/res/layout/fragment_edit.xml
@@ -20,9 +20,24 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:gravity="end"
             android:hint="@string/nomedamusica"
             android:text="@string/nomedamusica"
-            android:textAlignment="center"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/textView21"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=" # "
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/txtNumeroMusica"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="00"
             android:textStyle="bold" />
     </LinearLayout>
 
@@ -101,9 +116,71 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:gravity="end"
             android:text="@string/compasso"
-            android:textAlignment="center"
             android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/textView12"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=" # "
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/txtNumCompasso"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="00"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout12"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/linearLayout2"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/txtTempoCompasso"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="end"
+            android:text="00" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="/"
+            android:textAlignment="center" />
+
+        <TextView
+            android:id="@+id/txtNotaCompasso"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="00" />
+
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@string/bpm" />
+
+        <TextView
+            android:id="@+id/txtBpmCompasso"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="start"
+            android:text="000" />
     </LinearLayout>
 
     <LinearLayout
@@ -111,7 +188,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_below="@id/linearLayout2"
+        android:layout_below="@id/linearLayout12"
         android:orientation="horizontal">
 
         <TextView
@@ -187,10 +264,25 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/linearLayout13"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/linearLayout10"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btnConfirmaCompasso"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/confirmar_compasso" />
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/linearLayout10"
+        android:layout_below="@+id/linearLayout13"
         android:orientation="horizontal"
         android:id="@+id/linearLayout11">
 
@@ -199,16 +291,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Button"
-            tools:text="@string/remover_compasso" />
+            android:text="@string/remover_compasso" />
 
         <Button
             android:id="@+id/btn_InserirCompasso"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Button"
-            tools:text="@string/insere_compasso" />
+            android:text="@string/insere_compasso" />
     </LinearLayout>
 
     <LinearLayout
