--- a/app/src/main/res/layout/fragment_play.xml
+++ b/app/src/main/res/layout/fragment_play.xml
@@ -3,9 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context="br.com.matteroftime.ui.play.PlayFragment">
-
+    <!--android:orientation="vertical"-->
 
     <LinearLayout
         android:layout_width="match_parent"
