teste views edit

--- a/app/src/main/res/layout/fragment_edit.xml
+++ b/app/src/main/res/layout/fragment_edit.xml
@@ -187,6 +187,20 @@
             android:layout_weight="1"
             android:gravity="start"
             android:text="000" />
+
+        <TextView
+            android:id="@+id/textView10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="x" />
+
+        <TextView
+            android:id="@+id/txtRepeticoesCompasso"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="00" />
     </LinearLayout>
 
     <LinearLayout
