--- a/app/src/main/res/layout/row_musicas_list.xml
+++ b/app/src/main/res/layout/row_musicas_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/musica_linha"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="left"
@@ -58,6 +59,25 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="false"
         android:layout_marginLeft="@dimen/margin_padding_small"
+        android:text="TextView"
+        android:textSize="@dimen/text_size_xxnormal" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/margin_padding_small"
+        android:layout_weight="1"
+        android:gravity="end"
+        android:text="@string/total_de_compassos"
+        android:textSize="@dimen/text_size_xxnormal" />
+
+    <TextView
+        android:id="@+id/txtTotalCompassos"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/margin_padding_small"
+        android:layout_weight="1"
         android:text="TextView"
         android:textSize="@dimen/text_size_xxnormal" />
 </LinearLayout>
