--- a/app/src/main/res/layout/row_musicas_list.xml
+++ b/app/src/main/res/layout/row_musicas_list.xml
@@ -31,7 +31,7 @@
         android:textSize="@dimen/text_size_xxnormal" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/textoBPM"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/margin_padding_tiny"
@@ -47,6 +47,7 @@
         android:textSize="@dimen/text_size_xxnormal" />
 
     <TextView
+        android:id="@+id/txtBarra"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/margin_padding_small"
@@ -63,7 +64,7 @@
         android:textSize="@dimen/text_size_xxnormal" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/txtCompassos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/margin_padding_small"
