--- a/app/src/main/res/layout/fragment_play.xml
+++ b/app/src/main/res/layout/fragment_play.xml
@@ -180,18 +180,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/linearLayout5"
-        android:gravity="center_horizontal"
         android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="top"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/txtRepeticoesAtual"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/margin_padding_small"
                 android:text="000" />
 
             <TextView
@@ -204,6 +205,20 @@
                 android:id="@+id/txtRepeticoesTotal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="000" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center|end"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/txtRepeticoesProximo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/margin_padding_small"
                 android:text="000" />
         </LinearLayout>
 
